2011-02-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/aorslshC_n.asm: New file.
	* mpn/x86/atom/sublsh2_n.asm: New file.

	* mpn/x86/atom/aors_n.asm: New code.
	* mpn/x86/atom/rshift.asm: Atom64 code adapted to 32-bit.

2011-02-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/atom/rsh1aors_n.asm: New file.

	* mpn/x86_64/atom/lshift.asm: New file.
	* mpn/x86_64/atom/rshift.asm: New file.
	* mpn/x86_64/atom/lshiftc.asm: New file.

2011-02-17 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/aorsmul_1.asm: Small improvements for small sizes.
	* mpn/x86/atom/aorrlshC_n.asm: Tiny size improvements.

2011-02-16  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Fix k8/k10 32-bit path setup problem.

2011-02-16 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/aorsmul_1.asm: Revive an old k7/aorsmul.

2011-02-14 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gmp-impl.h (mpn_sublsh_n): Declare.
	* mpn/asm-defs.m4: Likewise.

	* mpn/x86/atom/aorrlshC_n.asm: New file (was k7).
	* mpn/x86/k7/aorrlshC_n.asm: ReMoved.
	* mpn/x86/atom/aorrlsh2_n.asm: Grab atom/aorrlshC_n.asm.
	* mpn/x86/atom/rsblsh1_n.asm: Grab atom/aorrlshC_n.asm.

2011-02-13  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/atom/aorrlsh2_n.asm: New file.

2011-02-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/aorrlsh_n.asm: Minor tweaks, update c/l numbers.

	* mpn/x86_64/atom/sublsh1_n.asm: New file.

	* mpn/x86_64/atom/aorrlsh1_n.asm: New file.

2011-02-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/mod_1_1.asm: Fix Darwin syntax issues.

2011-02-10  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/mod_1_4.asm: Tune away a cycle for 970.

2011-02-11 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/k7/addlsh1_n.asm: Faster core loop (Torbjorn's).

	* configure.in: Add HAVE_NATIVE_{add,sub,rsb}lsh{,1,2}_nc.
	* tests/tests.h: refmpn_{add,sub,rsb}lsh{,1,2}_nc prototypes.